--- a/src/App.scss
+++ b/src/App.scss
@@ -1,4 +1,13 @@
 $themecolor: #FFE3C4;
+@mixin button {
+  display: block;
+  margin: 10px auto;
+  width: 20%;
+  padding: 5px;
+  border: none;
+  cursor: pointer;
+  background-color: #E7E08B;
+}
 
 * {
   margin: 0;
